src/styles/toolbar.less
@import "inputRange.less";
@import "inputFont.less";
@import "inputDropdown.less";
@import "inputLine.less";
@import "inputTextarea.less";
@import "inputImage.less";

// Toolbar
.toolbar-zone {
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	width: 320px;
}

.toolbar-ctn {
	z-index: 1;
	color: @black;
	background-color: white;
	border-right: 1px solid @border;
	overflow: hidden;
	box-shadow: 0px 8px 40px rgba(0,0,0,0.2);
	width: 100%;
	position: absolute;
	bottom: 0;
	top: 0;
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
}


.toolbar-tabs {
	width: 100%;
	border-bottom: 1px solid @border;
	position: relative;

	&:before,
	&:after {
		content:'';
		position: absolute;
		top: 0;
		bottom: 0;
		width: 40px;
		pointer-events: none;
	}
	&:before {
		left:0;
		background-image: linear-gradient(90deg, white, transparent);
	}
	&:after {
		right:0;
		background-image: linear-gradient(-90deg, white, transparent);
	}

	.toolbar-scroll {
		width: 100%;
		max-width: 100%;
		overflow: auto;
		display: flex;
		-webkit-overflow-scrolling: touch;
	}

	.toolbar-tabs-wrapper {
		padding: 0 15px;
		display: flex;
		flex-shrink: 0;
	}

	button {
		display: block;
		flex-shrink: 0;
		white-space: nowrap;
		padding: 18px 0 15px 0;
		margin: 0 15px;
		cursor: pointer;
		.font--button;

		color: @border;
		border-top: 2px solid transparent;
		border-bottom: 2px solid transparent;
		transition: 200ms ease-out;
		transition-property: color, border-color;
		&.is-active {
			border-bottom-color: @accent;
			color: @accent;
			transition-duration: 75ms;
		}
		&:hover {
			color: @accent;
			transition-duration: 75ms;
		}
	}
}

.toolbar-content {
	flex-grow: 1;
	position: relative;
	background-color: #f5f8fa;

	.toolbar-tab-content {
		position: absolute;
		top:0;left:0;right:0;bottom:0;
		overflow-y: auto;
		overflow-x: hidden;
		// ~> HIDDEN
		visibility: hidden;
		opacity: 0;
		transition: visibility 0ms 100ms, opacity 100ms ease-out;
		// ~> VISIBLE
		&.is-active {
			opacity: 1;
			visibility: visible;
			transition: visibility 0ms, opacity 100ms ease-out;
		}
	}
}

.toolbar-tab-list {
	// min-height: 100%;
	.buttons-ctn {
		padding:0;
		margin:0;
	}
	.items-ctn {
		min-height: 100%;
		position: absolute;
		top:0; left:0; right:0;
		z-index: 1;
		transform: translateX(100%);

		.toolbar-module {
			min-height: 100%;
			background-color: white;
			position: absolute;
			top:0; left:0; right:0;
			visibility: hidden;
			opacity: 0;
			transition: transform 90ms ease-out, opacity 90ms ease-out, visibility 0ms 90ms;

			&.is-active {
				opacity: 1;
				visibility: visible;
				transform: translateX(-100%);
				transition-delay: 0ms;
			}
		}
	}
}

.toolbar-group,
.toolbar-module {
	padding: 24px 30px 6px 30px;
	border-bottom: 1px solid @border;
	background-color: white;

	.toolbar-group-title,
	.toolbar-module-title {
		.font--title;
		margin: 0;
		margin-bottom: 18px;
	}
	
}
.toolbar-option-label {
	.font--intertitle;
}

.toolbar-module {
	padding: 0;
	.toolbar-module-title {
		.font--title-big;
		margin-bottom: 0;
		color: @accent;
		display: flex;
		align-items: center;
		justify-content: center;
		padding: 30px;
		min-height: 60px;
		text-align: center;
		background-color: @background;
	}
}

.toolbar-buttons {
	height: 55px;
	display: flex;
	.button-save {
		.font--text;
		font-weight: 600;
		width: 100%;
		background-color: @accent;
		color: white;
		position: relative;
		cursor: pointer;
		transition: background-color 200ms @ease-out;

		&:hover {
			background-color: @accent-darker;
		}

		.message {
			opacity: 0;
			visibility: hidden;
			position: absolute;
			top:0; bottom:0; left:0; right:0;
			display: flex;
			align-items: center;
			justify-content: center;
			span {
				position: relative;
			}
			&:before {
				content:'';
				position: absolute;
				top:0; bottom:0; left:0; right:0;
			}
		}
		.message-success:before { background-color: @success; }
		.message-error:before { background-color: @error; }
	}
}

.item-list {
	margin-bottom: 20px;
}

.toolbar-accordion-item {
	.font--text;
	border: 1px solid @border;
	border-radius: 4px;
	overflow: hidden;
	list-style: none;
	padding: 0;
	margin: 0;
	margin-top: -1px;
	color: @black;
	background-color: white;
	box-sizing: border-box;
	.toolbar-accordion-header {
		display: flex;
		.drag-handle {
			cursor: move;
			padding: 0 10px;
			display: flex;
			align-items: center;
			flex-shrink: 0;
		}
		.toolbar-accordion-button {
			.font--button;
			color: @black;
			display: block;
			flex-grow:1;
			text-align: left;
			padding: 10px 0;
			box-sizing: border-box;
			cursor: pointer;
		}
	}

	.toolbar-accordion-content {
		transition: height 200ms ease-out;
		.content-wrapper {
			background-color: @background;
			border-top: 1px solid @border;
			padding: 10px;
		}
	}
	// ~> IS NOT ACTIVE
	&:not(.is-active) {
		.toolbar-accordion-content {
			// ~> IS INITED
			&.is-inited {
				height: 0!important;
			}
		}
	}
	// ~> IS ACTIVE
	&.is-active {
		.toolbar-accordion-content {

		}
	}
}


.toolbar-list-button-ctn, {
	list-style: none;
	padding: 0;
	margin: 0;
	color: @black;
	background-color: white;
	box-sizing: border-box;
	border-bottom: 1px solid @border;
	display: flex;
	.drag-handle {
		cursor: move;
		padding: 0 20px;
		display: flex;
		align-items: center;
		flex-shrink: 0;
	}
	.toolbar-list-button {
		.font--title;
		color: @black;
		display: block;
		flex-grow:1;
		text-align: left;
		padding: 20px 30px 20px 0;
		box-sizing: border-box;
		cursor: pointer;
	}
}

.button-add-module,
.button-add-item {
	width: 100%;
	display: block;
	position: relative;
	cursor: pointer;
	select {
		width: 100%;
		height: 100%;
		position: relative;
		z-index: 1;
		opacity: 0;
		cursor: pointer;
	}
	&:before {
		content:'';
		position: absolute;
		top:0; bottom:0; left:0; right:0;
		border: 1px dashed @accent;
		border-radius: 4px;
		transition: background-color 200ms ease-out;
	}
	&:after {
		color: @accent;
		position: absolute;
		top:0.2em; bottom:0; left:0; right:0;
		display: flex;
		align-items:center;
		justify-content: center;
		text-align: center;
		transition: color 200ms ease-out;
	}
	// ~> HOVER
	&:hover {
		&:before {
			background-color: @accent;
		}
		&:after {
			color: white;
		}
	}
}

.button-add-module {
	height: 60px;
	&:before {
		margin: 8px;
	}
	&:after {
		content: 'Add Module';
		.font--button;
	}
}

.button-add-item {
	margin-top: 8px;
	height: 30px;
	&:after {
		content: 'Add Item';
		.font--intertitle;
	}
}

